--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <meta property="og:title" content="AI Fever Doctor - Smart Diagnosis for Fever-Related Illnesses" />
     <meta property="og:description" content="Get accurate AI-powered preliminary diagnosis for fever symptoms. Quick assessment with doctor referrals." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:site" content="" />
     <meta name="twitter:title" content="AI Fever Doctor - Smart Diagnosis" />
     <meta name="twitter:description" content="AI-powered fever diagnosis and medical recommendations" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    
   </head>
 
   <body>
