--- a/index.html
+++ b/index.html
@@ -23,5 +23,8 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <p style="font-size:1rem; text-align:center; margin-top: 2rem;">
+    &copy; 2025 Anshul Bhilare. All rights reserved.
+</p>
   </body>
 </html>
