--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
     <p style="font-size:0.5rem; text-align:center; margin-top: 1rem;">
-    &copy; 2025 Anshul Bhilare. All rights reserved.
+    &copy; 2025 Control Alt Elite. All rights reserved.
 </p>
   </body>
 </html>
